# paper-template

./: CHANGELOG.md  Makefile  acmart.cls  bibliography.bib  default.nix  ghcide-wrapper  hie.yaml  paper-template.cabal  shell.nix
nix/: sources.json
src/: Formalism.lhs  Introduction.lhs  Main.lhs  Utils.hs  format.fmt  sql-haskell.fmt
