cabal-version:       >=1.10

name:                paper-template
version:             0.1.0.0
license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Introduction Formalism Utils
  build-depends:       base >=4.13 && <4.14, ghc-prim
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options:
    -pgmL lhs2TeX -optL-P./src: -optL--pre
